# resume-mcp-server

./: .cursorprompt  .cursorrules  .dockerignore  .env.sample  .gitignore  AGENTS.md  AGETNS.md  DOCKER.md  DOCS_GENERATION.md  Dockerfile  MCP_SETUP.md  MCP_SETUP_cn.md  MCP_TOOLS.html  MCP_TOOLS.md  MCP_USER_MANUAL.md  MCP_USER_MANUAL_cn.md  README-cn.md  README.md  TEST_SUMMARY.md  docker-compose.yml  entrypoint.sh  generate_all_docs.sh  generate_mcp_docs.py  generate_mcp_html.py  mcp_tools_report.json  project_docs.md  pyproject.toml  requirement.txt  run_cf_tunnel.sh  run_mcp_server.sh  run_tests.sh  sample.env  server-info.json  setupenv.sh  web_interface_plan.md
.claude/: settings.local.json
.cloudflared/: 599718c3-ca5e-4347-8b65-2f80c1ef91cf.json  cert.pem  config.docker.yml  config.yml
.devcontainer/: Dockerfile  Dockerfile.base  devcontainer.json  pyproject.toml
.github/: Dockerfile.ci  compose.ci.yml
.github/workflows/: ci.yml  docker-ghcr-main.yml
data/resumes/: README.md  amazon_agi_3126758.yaml  aws_sdei.yaml  gpu_arch_new_grad_2025.yaml  we_bible.yaml
data/resumes/output/: README.md
docs/: latex_compile_api.md  latex_compile_service.md  mcp_internal.md  mcp_server.md  mcp_tools_refactor_plan.md  resume_version_management.md
k8s/: force-pull-latest-and-restart.sh  refresh-secrets-and-restart.sh  resume-mcp-secret-store.yaml  resume-mcp.yaml
logs/: README.md
schemas/: resume_schema.json  resume_summary_schema.json
scripts/: convert_latex_resumes.py  push_env_secret_store.sh  render_resume_cli.py  run_all_tests.py  start_mcp_server.py  summarize_resumes.py  validate_resume_yaml.py  view_mcp_logs.py  view_parsing_logs.py
services/latex_compile_api/: Dockerfile  README.md  app.py  celery_app.py  requirements.txt  s3_utils.py  tasks.py
skills/resume-mcp-safe-json/: SKILL.md
skills/resume-mcp-safe-json/agents/: openai.yaml
skills/resume-mcp-safe-json/scripts/: safe_resume_import.py
src/data/resumes/: TestResumeTextEditing.yaml
src/myagent/: filesystem.py  latex_jobs.py  latex_worker.py  llm_config.py  mcp_server.py  resume_input_parser.py  resume_loader.py  resume_renderer.py  resume_summary.yaml  s3_utils.py  settings.py  test.py  tools.py  vector_search.py
src/myagent/models/: agent_resume.py  boss.py
src/resume_platform/: resume_input_parser.py  resume_renderer.py  tools.py  vector_search.py
src/resume_platform/infrastructure/: filesystem.py  llm_config.py  settings.py
src/resume_platform/models/: agent_resume.py
src/resume_platform/resume/: editing.py  repository.py  views.py
src/samples/: resume_1.tex  resume_2.tex  resume_3.tex
templates/: awesome-cv.cls  resume.tex  resume_template.fls  resume_template.tex  resume_template.yaml
templates/latex/: resume_main.tex.j2
templates/latex/sections/: education.tex.j2  entries.tex.j2  experience.tex.j2  projects.tex.j2  skills.tex.j2  summary.tex.j2
tests/: conftest.py  manual_verify_real_data.py  resume_aggregate.yaml  run_all_tests.py  test_basic_functions.py  test_ci_workflow.py  test_configuration_files.py  test_documentation.py  test_environment_config.py  test_filesystem.py  test_multi_file_upload.py  test_pr_integration.py  test_quick_toolkit.py  test_quick_version_workflow.py  test_remote_renderer.py  test_render_resume_overleaf.py  test_render_resume_pdf.py  test_resume_operations.py  test_resume_rendering.py  test_resume_repository.py  test_tool_compile.py  test_tools.py  test_vector_search.py
tests/fixtures/: main.tex  main_structure.tex  sub.tex
tests/fixtures/chapters/: intro.tex
tests/fixtures/test_data/: resume_aggregate.yaml  resume_summary.yaml
workspaces/resume-mcp-server/: fix_test.py
(+4 files in other folders)
